[package]
name = "anni-provider-od"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onedrive-api = "0.9"
dashmap = "5"
anni-provider = { git = "https://github.com/snylonue/anni.git", package = "anni-provider", branch = "provider-feature", default-features = false, features = ["reqwest"] }
anni-flac = { git = "https://github.com/snylonue/anni.git", package = "anni-flac", branch = "provider-feature", features = ["async"]}
async-trait = "0.1"
reqwest = "0.11"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"

tokio = { version = "1", features = ["rt-multi-thread", "macros"]}